# OpenCV_Examples

./: AppendVids.c  CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  OpenCV_Example  README.md  ldd_of_opencv_world_lib.txt  main.cpp  run
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
